btn modify, p justify

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ h3 {
     padding: 20px 20px 40px 20px;
 }
 
+.about p {
+    text-align: justify;
+}
+
 .about img {
     display: none;
 }
@@ -90,11 +94,13 @@ h3 {
     width: 100px;
     height: 30px;
     margin-top: 3px;
+    margin-right: 20px;
     padding: 4px 8px 4px 8px;
 }
 
 .btn-mail a {
     text-decoration: none;
+    display: block;
     color: rgba(255, 255, 255, 1);
 }
 
