--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ h3 {
     padding: 5px;
     width: 54vw;
     height: 18vw;
+    box-sizing: border-box;
 }
 
 .header-title {
@@ -122,6 +123,7 @@ h3 {
     padding: 5px 0 8px 0;
     font-size: 6vw;
     margin: 0;
+    text-align: center;
 }
 
 .header-subtitle {
