--- a/css/drawer.css
+++ b/css/drawer.css
@@ -16,7 +16,7 @@
     z-index: 101;
     top: 0;
     overflow: hidden;
-    width: 16.25rem;
+    width: 23vw;
     height: 50vw;
     color: black;
     background-color: rgba(255, 255, 255, 1);
@@ -100,7 +100,7 @@
 \*!------------------------------------*/
 
 .drawer--left .drawer-nav {
-    left: -16.25rem;
+    left: -23vw;
     -webkit-transition: left .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
     transition: left .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
 }
@@ -110,7 +110,7 @@
 }
 
 .drawer--left.drawer-open .drawer-hamburger {
-    left: 16.25rem;
+    left: 23vw;
 }
 
 
@@ -119,7 +119,7 @@
 \*!------------------------------------*/
 
 .drawer--right .drawer-nav {
-    right: -16.25rem;
+    right: -23vw;
     -webkit-transition: right .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
     transition: right .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
 }
@@ -129,7 +129,7 @@
 }
 
 .drawer--right.drawer-open .drawer-hamburger {
-    right: 16.25rem;
+    right: 21vw;
 }
 
 
@@ -174,7 +174,7 @@
     height: 2px;
     -webkit-transition: all .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
     transition: all .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(0, 0, 0, 1);
 }
 
 .drawer-hamburger-icon:before, .drawer-hamburger-icon:after {
@@ -297,13 +297,13 @@
 
 @media (min-width: 75em) {
     .drawer--sidebar .drawer-nav {
-        width: 16.25rem;
+        width: 23vw;
     }
     .drawer--sidebar.drawer--left .drawer-contents {
-        margin-left: 16.25rem;
+        margin-left: 23vw;
     }
     .drawer--sidebar.drawer--right .drawer-contents {
-        margin-right: 16.25rem;
+        margin-right: 23vw;
     }
     /*! container */
     .drawer--sidebar .drawer-container {
@@ -412,7 +412,7 @@
     /*! dropdown */
     .drawer-navbar .drawer-dropdown-menu {
         position: absolute;
-        width: 16.25rem;
+        width: 23vw;
         border: 1px solid #ddd;
     }
     .drawer-navbar .drawer-dropdown-menu-item {
