--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-    font-size: 62.5%;
-}
-
 html, body, p, th, td, li, dd, dt {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
@@ -37,9 +33,8 @@ h3 {
     right: 0;
     margin: auto;
     padding: 5px;
-    width: 54vw;
+    width: 50vw;
     height: 18vw;
-    box-sizing: border-box;
 }
 
 .header-title {
@@ -119,4 +114,13 @@ h3 {
 
 .hidden {
     display: none;
+}
+
+
+/*pierwsza rozdzielczość dla której widać navbar 1024px szer */
+
+@media (min-width: 64em) {
+    .header-author {
+        width: 45vw;
+    }
 }
