--- a/css/style1080.css
+++ b/css/style1080.css
@@ -49,74 +49,8 @@ a {
     font-weight: 400;
 }
 
-a:hover, a:visited, a:link, a:active {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 1);
-}
-
 
 /* CUSTOM SETTING */
-
-
-/* NAVBAR*/
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgba(100, 181, 172, .8);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 40px;
-    z-index: 1;
-    text-align: center;
-}
-
-li {
-    display: inline-block;
-    font-weight: bold;
-    -webkit-transition: background-color 0.2s ease;
-    -moz-transition: background-color 0.2s ease;
-    transition: background-color 0.2s ease;
-    margin: 0px 0px 0px 0px;
-}
-
-li a {
-    display: block;
-    color: rgba(255, 255, 255, 1);
-    text-align: center;
-    text-decoration: none;
-    margin: 0px 0px 0px 0px;
-    padding: 14px 15px 5px 15px;
-}
-
-li:hover {
-    background-color: rgba(100, 181, 172, .9);
-    border-bottom: 3px solid rgba(203, 202, 202, 1);
-}
-
-
-/**/
-
-header {
-    height: 1022px;
-    background-image: url(./src/images/header.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-}
-
-
-/* ---- particles.js container ---- */
-
-#particles-js {
-    position: absolute;
-    width: 100%;
-    height: 1022px;
-}
 
 .title {
     border-top: 3px;
@@ -208,15 +142,14 @@ button:hover {
 .experience img {
     margin: 0 10px 0 10px;
     -webkit-transition: transform 0.3s ease-in-out;
-    -moz-transition: transform 0.3s ease-in-out;
+    -webkit-transition: -webkit-transform 0.3s ease-in-out;
+    transition: -webkit-transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
 }
 
 .experience img:hover {
-    -moz-transform: scale(1.3);
     -webkit-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    -ms-transform: scale(1.3);
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
@@ -299,7 +232,6 @@ a:hover.tooltips span {
 
 .gallery img {
     display: block;
-    -moz-transition: all .6s ease-in-out;
     -webkit-transition: all .6s ease-in-out;
     transition: all .6s ease-in-out;
     width: 20em;
@@ -310,7 +242,6 @@ a:hover.tooltips span {
     height: 100%;
     position: absolute;
     text-align: center;
-    -moz-transition: all .6s ease-in-out;
     -webkit-transition: all .6s ease-in-out;
     transition: all .6s ease-in-out;
     width: 100%;
@@ -321,10 +252,8 @@ a:hover.tooltips span {
     top: 0;
     left: 0;
     -webkit-transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
     transform-origin: 0 0;
     -webkit-transform: rotateZ(-90deg);
-    -moz-transform: rotateZ(-90deg);
     transform: rotateZ(-90deg);
 }
 
@@ -341,22 +270,18 @@ a:hover.tooltips span {
     margin: -1em 0 0 -1em;
     line-height: 2em;
     -webkit-transform-origin: -4em -4em;
-    -moz-transform-origin: -4em -4em;
     transform-origin: -4em -4em;
     -webkit-transform: rotateZ(-90deg);
-    -moz-transform: rotateZ(-90deg);
     transform: rotateZ(-90deg);
 }
 
 .gallery.rotate.left:before, .gallery.rotate.left:after {
     -webkit-transform: rotateZ(90deg);
-    -moz-transform: rotateZ(90deg);
     transform: rotateZ(90deg);
 }
 
 .gallery.rotate:hover:before, .gallery.rotate:hover:after {
     -webkit-transform: rotateZ(0);
-    -moz-transform: rotateZ(0);
     transform: rotateZ(0);
 }
 
