some minor mobile fixes

--- a/css/scss.scss
+++ b/css/scss.scss
@@ -156,10 +156,20 @@ h3 {
     background-color: rgba(100, 203, 192, 1);
     text-align      : center;
     padding-bottom  : 20px;
+    margin-left     : auto;
+    margin-right    : auto;
+    width           : 100%;
+
+    .works-container {
+        margin-left : auto;
+        margin-right: auto;
+        width       : 90vw;
+    }
 
     h2 {
-        margin     : 0;
-        padding-top: 1.50em;
+        margin        : 0;
+        padding-top   : 2.7em;
+        padding-bottom: 0.5em;
     }
 
     .gallery {
@@ -228,7 +238,7 @@ h3 {
         padding-bottom: 30px;
     }
 }
-/* MEDIA QUERY*/
+/* MEDIA QUERY NORMAL SCREEN */
 @media (min-width: 64em) {
     h3 {
         font-family: 'Roboto', sans-serif;
@@ -236,8 +246,10 @@ h3 {
         font-size  : 1.3vw;
     }
 
-    .header-author {
-        width: 45vw;
+    .header {
+        .header-author {
+            width: 45vw;
+        }
     }
 
     .about {
@@ -289,89 +301,89 @@ h3 {
         height        : 35vw;
         padding-top   : 60px;
         padding-bottom: 60px;
-    }
+        /* GALLERY SETTINGS */
+        .gallery {
+            position  : relative;
+            display   : inline-block;
+            overflow  : hidden;
+            border    : 1em solid #fff;
+            background: #111;
+            max-width : 100%;
+            margin    : 10px;
+            width     : 18vw;
+            height    : 10vw;
+            margin    : duza;
 
-    .works-container {
-        width: 75vw;
-    }
-    /* GALLERY SETTINGS */
-    .gallery {
-        border    : 1em solid #fff;
-        background: #111;
-        width     : 18vw;
-        height    : 10vw;
+            img {
+                display           : block;
+                -webkit-transition: all 0.6s ease-in-out;
+                transition        : all 0.6s ease-in-out;
+                width             : 20vw;
+            }
 
-        img {
-            -webkit-transition: all 0.6s ease-in-out;
-            transition        : all 0.6s ease-in-out;
-            width             : 20vw;
+            &:after {
+                content           : '';
+                height            : 100%;
+                position          : absolute;
+                text-align        : center;
+                -webkit-transition: all 0.6s ease-in-out;
+                transition        : all 0.6s ease-in-out;
+                width             : 100%;
+            }
+
+            &:before {
+                content           : '';
+                height            : 100%;
+                position          : absolute;
+                text-align        : center;
+                -webkit-transition: all 0.6s ease-in-out;
+                transition        : all 0.6s ease-in-out;
+                width             : 100%;
+            }
         }
 
-        &:after {
-            content           : '';
-            height            : 100%;
-            position          : absolute;
-            text-align        : center;
-            -webkit-transition: all 0.6s ease-in-out;
-            transition        : all 0.6s ease-in-out;
-            width             : 100%;
+        .gallery.rotate {
+            &:before {
+                background              : rgba(100, 203, 192, .5);
+                top                     : 0;
+                left                    : 0;
+                -webkit-transform-origin: 0 0;
+                transform-origin        : 0 0;
+                -webkit-transform       : rotateZ(-90deg);
+                transform               : rotateZ(-90deg);
+            }
+
+            &:after {
+                content                 : "\f09b";
+                color                   : #fff;
+                font-family             : FontAwesome;
+                font-size               : 2em;
+                background              : rgba(100, 203, 192, .9);
+                top                     : 50%;
+                left                    : 50%;
+                width                   : 2em;
+                height                  : 2em;
+                margin                  : -1em 0 0 -1em;
+                line-height             : 2em;
+                -webkit-transform-origin: -4em -4em;
+                transform-origin        : -4em -4em;
+                -webkit-transform       : rotateZ(-90deg);
+                transform               : rotateZ(-90deg);
+            }
         }
 
-        &:before {
-            content           : '';
-            height            : 100%;
-            position          : absolute;
-            text-align        : center;
-            -webkit-transition: all 0.6s ease-in-out;
-            transition        : all 0.6s ease-in-out;
-            width             : 100%;
-        }
-    }
-
-    .gallery.rotate {
-        &:before {
-            background              : rgba(100, 203, 192, .5);
-            top                     : 0;
-            left                    : 0;
-            -webkit-transform-origin: 0 0;
-            transform-origin        : 0 0;
-            -webkit-transform       : rotateZ(-90deg);
-            transform               : rotateZ(-90deg);
+        .gallery.rotate.left:after,
+        .gallery.rotate.left:before {
+            -webkit-transform: rotateZ(90deg);
+            transform        : rotateZ(90deg);
         }
 
-        &:after {
-            content                 : "\f09b";
-            color                   : #fff;
-            font-family             : FontAwesome;
-            font-size               : 2em;
-            background              : rgba(100, 203, 192, .9);
-            top                     : 50%;
-            left                    : 50%;
-            width                   : 2em;
-            height                  : 2em;
-            margin                  : -1em 0 0 -1em;
-            line-height             : 2em;
-            -webkit-transform-origin: -4em -4em;
-            transform-origin        : -4em -4em;
-            -webkit-transform       : rotateZ(-90deg);
-            transform               : rotateZ(-90deg);
+        .gallery.rotate:hover:after,
+        .gallery.rotate:hover:before {
+            -webkit-transform: rotateZ(0);
+            transform        : rotateZ(0);
         }
-    }
-
-    .gallery.rotate.left:after,
-    .gallery.rotate.left:before {
-        -webkit-transform: rotateZ(90deg);
-        transform        : rotateZ(90deg);
-    }
-
-    .gallery.rotate:hover:after,
-    .gallery.rotate:hover:before {
-        -webkit-transform: rotateZ(0);
-        transform        : rotateZ(0);
-    }
-    /* GALLERY SETTINGS END*/
-    .hidden {
-        display: inline-block;
+        /* GALLERY SETTINGS END*/
     }
 
     .footer {
